# clip-relay

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.slim  README.md  README.zh-CN.md  next.config.ts  package-lock.json  package.json  server.ts  tsconfig.json  tsconfig.server.json
.github/workflows/: docker-publish.yml
.next-export/: 404.html  index.html  index.txt  s.html  s.txt
.next-export/_next/static/SCiupMfo4_cwcqn_44OHh/: _buildManifest.js
.next-export/_next/static/chunks/: 126.10851fab63eae88a.js  154.aa09cde91ae29bdc.js  187.76710b8e6159863b.js  236-050667a55cb6d6f9.js  251.5569af5de9e88986.js  251.ecdd4d6287acfe28.js  332-b87a4798f432b3b3.js  537.e8e6388d31361719.js  709.7d75af0b869e8ecf.js  800-da8fed9b0fd1207a.js  90.732f0a31d0c20f93.js  webpack-44e13740d7fdd1d0.js  webpack-e868ff56bbdc35d4.js
chrome/: API_CONTENT_TESTS.md  FIXED_NOTIFICATION_TESTS.md  NOTIFICATION_TESTS.md  README.md  SERVER_PAGE_TESTS.md  TESTING.md  TEST_PLAN.md  UNIFIED_NOTIFICATION_TESTS.md  background.js  manifest.json  popup.html  popup.js
deploy/: compose.yml
prisma/: schema.prisma
rust-server/: Cargo.toml
rust-server/data/: custom.db
rust-server/src/: main.rs
scripts/: precompress.mjs
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/events/: route.ts
src/app/s/: ShareClient.tsx
src/components/clipboard/: AddItemDialog.tsx  ClipboardGrid.tsx  ClipboardList.tsx  CreateShareDialog.tsx  ItemDetailDialog.tsx  ShareManagerDialog.tsx
src/lib/: auth.ts  copy.ts  db.ts  socket-events.ts  socket.ts  sse.ts
src/lib/db/: schema.ts
(+19 files in other folders)
