[package]
name = "clip-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros", "json", "multipart"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs", "compression-gzip", "compression-br"] }
rusqlite = { version = "0.31", features = ["bundled"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
form_urlencoded = "1"
dotenvy = "0.15"
sha2 = "0.10"
rand = "0.8"
base64 = { version = "0.21", default-features = false, features = ["alloc"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-stream = "0.3"
